// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`export_default_arrow_expression.js - babylon-verify 1`] = `
====================================options=====================================
parsers: ["babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default () => {};

=====================================output=====================================
export default () => {};

================================================================================
`;

exports[`export_default_arrow_expression.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default () => {};

=====================================output=====================================
export default () => {};

================================================================================
`;

exports[`export_default_call_expression.js - babylon-verify 1`] = `
====================================options=====================================
parsers: ["babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default foo()

=====================================output=====================================
export default foo();

================================================================================
`;

exports[`export_default_call_expression.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default foo()

=====================================output=====================================
export default foo();

================================================================================
`;

exports[`export_default_class_declaration.js - babylon-verify 1`] = `
====================================options=====================================
parsers: ["babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default class Foo {}

=====================================output=====================================
export default class Foo {}

================================================================================
`;

exports[`export_default_class_declaration.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default class Foo {}

=====================================output=====================================
export default class Foo {}

================================================================================
`;

exports[`export_default_class_expression.js - babylon-verify 1`] = `
====================================options=====================================
parsers: ["babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (class foobar {})

=====================================output=====================================
export default (class foobar {});

================================================================================
`;

exports[`export_default_class_expression.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (class foobar {})

=====================================output=====================================
export default (class foobar {});

================================================================================
`;

exports[`export_default_function_declaration.js - babylon-verify 1`] = `
====================================options=====================================
parsers: ["babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default function() {}

=====================================output=====================================
export default function() {}

================================================================================
`;

exports[`export_default_function_declaration.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default function() {}

=====================================output=====================================
export default function() {}

================================================================================
`;

exports[`export_default_function_declaration_async.js - babylon-verify 1`] = `
====================================options=====================================
parsers: ["babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default async function foo() {}

=====================================output=====================================
export default async function foo() {}

================================================================================
`;

exports[`export_default_function_declaration_async.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default async function foo() {}

=====================================output=====================================
export default async function foo() {}

================================================================================
`;

exports[`export_default_function_declaration_named.js - babylon-verify 1`] = `
====================================options=====================================
parsers: ["babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default function f(){}

=====================================output=====================================
export default function f() {}

================================================================================
`;

exports[`export_default_function_declaration_named.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default function f(){}

=====================================output=====================================
export default function f() {}

================================================================================
`;

exports[`export_default_function_expression.js - babylon-verify 1`] = `
====================================options=====================================
parsers: ["babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (function() {});

=====================================output=====================================
export default (function() {});

================================================================================
`;

exports[`export_default_function_expression.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (function() {});

=====================================output=====================================
export default (function() {});

================================================================================
`;

exports[`export_default_function_expression_named.js - babylon-verify 1`] = `
====================================options=====================================
parsers: ["babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (function f(){})

=====================================output=====================================
export default (function f() {});

================================================================================
`;

exports[`export_default_function_expression_named.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (function f(){})

=====================================output=====================================
export default (function f() {});

================================================================================
`;

exports[`export_default_new_expression.js - babylon-verify 1`] = `
====================================options=====================================
parsers: ["babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default new Foo();

=====================================output=====================================
export default new Foo();

================================================================================
`;

exports[`export_default_new_expression.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default new Foo();

=====================================output=====================================
export default new Foo();

================================================================================
`;
